# flock-mcp

./: LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation_improvement.yaml  feature_request.yaml  question_support_request.yaml  vulnerability_report.md
.github/workflows/: deploy-whiteduck-pypi.yml
scripts/: code_collector.py  create_docs.py  ensure_uv.py
src/flock/tools/: azure_tools.py  code_tools.py  file_tools.py  github_tools.py  markdown_tools.py  system_tools.py  text_tools.py  web_tools.py  zendesk_tools.py
tools/: markdown_tools.py  system_tools.py  text_tools.py  zendesk_tools.py
